--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       {%- endif -%}
 
       {%- if site.data.education.size > 0 -%}
-        {%- include education.html -%}
+        {%- include asdf.html -%}
       {%- endif -%}
 
       {%- if site.more_content -%}
