--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,10 @@
       {%- if site.data.experience.size > 0 -%}
         {%- include experience.html -%}
       {%- endif -%}
+      
+      {%- if site.data.project.size > 0 -%}
+        {%- include project.html -%}
+      {%- endif -%}
 
       {%- if site.more_content -%}
         {%- include more.html -%}
